--- a/.github/workflows/react-build.yml
+++ b/.github/workflows/react-build.yml
@@ -1,9 +1,7 @@
-name: React Build and Test
+name: React Build Only
 
 on:
   push:
-    branches: [main]
-  pull_request:
     branches: [main]
 
 jobs:
@@ -21,9 +19,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
-      - name: Run tests
-        run: npm test
 
       - name: Build project
         run: npm run build
