--- a/.github/workflows/react-build.yml
+++ b/.github/workflows/react-build.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run tests
+        run: npm test
+
       - name: Build project
         run: npm run build
