--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
@@ -20,7 +21,7 @@
     "react-slideshow-image": "^4.3.2",
     "router": "^2.2.0",
     "slideshow": "^1.2.2",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
