--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-slideshow-image": "^4.3.2",
+    "react-toastify": "^11.0.5",
     "router": "^2.2.0",
     "slideshow": "^1.2.2",
     "swiper": "^11.2.8"
